Правка компонента формы

--- a/src/components/radio/_radio.sass
+++ b/src/components/radio/_radio.sass
@@ -15,8 +15,7 @@
                     content: ""
                     display: block
                     position: absolute
-                    top: 50%
-                    transform: translateY(-50%)
+                    top: 6px
                     left: -25px
                     width: 9px
                     height: 9px
@@ -24,8 +23,10 @@
     &__label
         font-size: 16px
         font-weight: 300
+        line-height: 1.2
         margin-left: 30px
         position: relative
+        margin-bottom: 0
 
 
         &::before
@@ -34,8 +35,7 @@
             content: ""
             display: block
             position: absolute
-            top: 50%
-            transform: translateY(-50%)
+            top: 2px
             left: -29px
             width: 17px
             height: 17px
