Завершил верстку блока захвата телефона

--- a/src/base/sass/_variables.scss
+++ b/src/base/sass/_variables.scss
@@ -33,6 +33,7 @@ $spacers: map-merge(
 		20: ($spacer * 1.25), // 20px
 		25: ($spacer * 1.5625), // 25px
 		30: ($spacer * 1.875), // 30px
+		35: ($spacer * 2.1875), // 35px
 		40: ($spacer * 2.5), // 40px
 		50: ($spacer * 3.125), // 50px
 		60: ($spacer * 3.75), // 60px
