--- a/src/base/sass/main.sass
+++ b/src/base/sass/main.sass
@@ -41,7 +41,7 @@
 @import "../../components/card/card"
 @import "../../components/present/present"
 @import "../../components/form/form"
-
+@import "../../components/spinner-block/spinner-block"
 
 /**
  * Bootstrap
