--- a/src/base/sass/main.sass
+++ b/src/base/sass/main.sass
@@ -42,6 +42,8 @@
 @import "../../components/present/present"
 @import "../../components/form/form"
 @import "../../components/spinner-block/spinner-block"
+@import "../../components/result/result"
+
 
 /**
  * Bootstrap
@@ -53,4 +55,5 @@
  * Libs styles
  */
 // @import '../../vendor/magnific-popup/main'
+// @import '../../vendor/js-plugin-circliful/main'
 
