--- a/src/mixins/sass/_sprite-img.scss
+++ b/src/mixins/sass/_sprite-img.scss
@@ -44,26 +44,26 @@ $car-image: '../images/sprite.png';
 $car: (93px, 101px, -93px, -101px, 60px, 30px, 212px, 159px, '../images/sprite.png', 'car', );
 $check-sm-name: 'check-sm';
 $check-sm-x: 168px;
-$check-sm-y: 48px;
+$check-sm-y: 94px;
 $check-sm-offset-x: -168px;
-$check-sm-offset-y: -48px;
+$check-sm-offset-y: -94px;
 $check-sm-width: 10px;
 $check-sm-height: 8px;
 $check-sm-total-width: 212px;
 $check-sm-total-height: 159px;
 $check-sm-image: '../images/sprite.png';
-$check-sm: (168px, 48px, -168px, -48px, 10px, 8px, 212px, 159px, '../images/sprite.png', 'check-sm', );
+$check-sm: (168px, 94px, -168px, -94px, 10px, 8px, 212px, 159px, '../images/sprite.png', 'check-sm', );
 $dahsed-line-name: 'dahsed-line';
 $dahsed-line-x: 183px;
-$dahsed-line-y: 48px;
+$dahsed-line-y: 94px;
 $dahsed-line-offset-x: -183px;
-$dahsed-line-offset-y: -48px;
+$dahsed-line-offset-y: -94px;
 $dahsed-line-width: 7px;
 $dahsed-line-height: 1px;
 $dahsed-line-total-width: 212px;
 $dahsed-line-total-height: 159px;
 $dahsed-line-image: '../images/sprite.png';
-$dahsed-line: (183px, 48px, -183px, -48px, 7px, 1px, 212px, 159px, '../images/sprite.png', 'dahsed-line', );
+$dahsed-line: (183px, 94px, -183px, -94px, 7px, 1px, 212px, 159px, '../images/sprite.png', 'dahsed-line', );
 $family-name: 'family';
 $family-x: 42px;
 $family-y: 101px;
@@ -76,27 +76,27 @@ $family-total-height: 159px;
 $family-image: '../images/sprite.png';
 $family: (42px, 101px, -42px, -101px, 46px, 42px, 212px, 159px, '../images/sprite.png', 'family', );
 $header-subtitle-left-name: 'header-subtitle-left';
-$header-subtitle-left-x: 92px;
+$header-subtitle-left-x: 130px;
 $header-subtitle-left-y: 0px;
-$header-subtitle-left-offset-x: -92px;
+$header-subtitle-left-offset-x: -130px;
 $header-subtitle-left-offset-y: 0px;
 $header-subtitle-left-width: 33px;
 $header-subtitle-left-height: 68px;
 $header-subtitle-left-total-width: 212px;
 $header-subtitle-left-total-height: 159px;
 $header-subtitle-left-image: '../images/sprite.png';
-$header-subtitle-left: (92px, 0px, -92px, 0px, 33px, 68px, 212px, 159px, '../images/sprite.png', 'header-subtitle-left', );
+$header-subtitle-left: (130px, 0px, -130px, 0px, 33px, 68px, 212px, 159px, '../images/sprite.png', 'header-subtitle-left', );
 $header-subtitle-right-name: 'header-subtitle-right';
-$header-subtitle-right-x: 130px;
+$header-subtitle-right-x: 92px;
 $header-subtitle-right-y: 0px;
-$header-subtitle-right-offset-x: -130px;
+$header-subtitle-right-offset-x: -92px;
 $header-subtitle-right-offset-y: 0px;
 $header-subtitle-right-width: 33px;
 $header-subtitle-right-height: 68px;
 $header-subtitle-right-total-width: 212px;
 $header-subtitle-right-total-height: 159px;
 $header-subtitle-right-image: '../images/sprite.png';
-$header-subtitle-right: (130px, 0px, -130px, 0px, 33px, 68px, 212px, 159px, '../images/sprite.png', 'header-subtitle-right', );
+$header-subtitle-right: (92px, 0px, -92px, 0px, 33px, 68px, 212px, 159px, '../images/sprite.png', 'header-subtitle-right', );
 $house-name: 'house';
 $house-x: 36px;
 $house-y: 0px;
@@ -119,10 +119,21 @@ $man-woman-total-width: 212px;
 $man-woman-total-height: 159px;
 $man-woman-image: '../images/sprite.png';
 $man-woman: (168px, 0px, -168px, 0px, 44px, 43px, 212px, 159px, '../images/sprite.png', 'man-woman', );
+$unlock-name: 'unlock';
+$unlock-x: 168px;
+$unlock-y: 48px;
+$unlock-offset-x: -168px;
+$unlock-offset-y: -48px;
+$unlock-width: 40px;
+$unlock-height: 41px;
+$unlock-total-width: 212px;
+$unlock-total-height: 159px;
+$unlock-image: '../images/sprite.png';
+$unlock: (168px, 48px, -168px, -48px, 40px, 41px, 212px, 159px, '../images/sprite.png', 'unlock', );
 $spritesheet-width: 212px;
 $spritesheet-height: 159px;
 $spritesheet-image: '../images/sprite.png';
-$spritesheet-sprites: ($arrow-back-up-primary, $arrow-foward-down-white, $car, $check-sm, $dahsed-line, $family, $header-subtitle-left, $header-subtitle-right, $house, $man-woman, );
+$spritesheet-sprites: ($arrow-back-up-primary, $arrow-foward-down-white, $car, $check-sm, $dahsed-line, $family, $header-subtitle-left, $header-subtitle-right, $house, $man-woman, $unlock, );
 $spritesheet: (212px, 159px, '../images/sprite.png', $spritesheet-sprites, );
 
 // The provided mixins are intended to be used with the array-like variables
