--- a/src/base/sass/main.sass
+++ b/src/base/sass/main.sass
@@ -43,7 +43,7 @@
 @import "../../components/form/form"
 @import "../../components/spinner-block/spinner-block"
 @import "../../components/result/result"
-
+@import "../../components/result-block/result-block"
 
 /**
  * Bootstrap
