--- a/src/components/textblock/_textblock.sass
+++ b/src/components/textblock/_textblock.sass
@@ -2,14 +2,10 @@
     // List
     ol,
     ul
-        color: #3e3e3e
         font-size: 16px
-        margin: 30px 0 30px 50px
-        line-height: 1.4
-
-    li
-        &:not(:last-child)
-            margin-bottom: 5px
+        font-weight: 300
+        line-height: 1.25
+        margin: 0 0 0 17px
 
     ol
         list-style: decimal
@@ -18,13 +14,13 @@
         list-style: disc
 
     p
-        color: #3e3e3e
+        color: $black
         font-size: 16px
-        font-weight: 400
-        line-height: 1.4
+        font-weight: 300
+        line-height: 1.25
 
         &:not(:last-child)
-            margin-bottom: 15px
+            margin-bottom: 27px
 
         blockquote
             border-left: 3px solid $blue
