--- a/src/mixins/sass/_sprite-img.scss
+++ b/src/mixins/sass/_sprite-img.scss
@@ -10,16 +10,16 @@
 // At the bottom of this section, we provide information about the spritesheet itself
 // $spritesheet: width height image $spritesheet-sprites;
 $arrow-back-up-primary-name: 'arrow-back-up-primary';
-$arrow-back-up-primary-x: 0px;
-$arrow-back-up-primary-y: 101px;
-$arrow-back-up-primary-offset-x: 0px;
-$arrow-back-up-primary-offset-y: -101px;
+$arrow-back-up-primary-x: 168px;
+$arrow-back-up-primary-y: 0px;
+$arrow-back-up-primary-offset-x: -168px;
+$arrow-back-up-primary-offset-y: 0px;
 $arrow-back-up-primary-width: 37px;
 $arrow-back-up-primary-height: 58px;
-$arrow-back-up-primary-total-width: 212px;
-$arrow-back-up-primary-total-height: 159px;
+$arrow-back-up-primary-total-width: 205px;
+$arrow-back-up-primary-total-height: 196px;
 $arrow-back-up-primary-image: '../images/sprite.png';
-$arrow-back-up-primary: (0px, 101px, 0px, -101px, 37px, 58px, 212px, 159px, '../images/sprite.png', 'arrow-back-up-primary', );
+$arrow-back-up-primary: (168px, 0px, -168px, 0px, 37px, 58px, 205px, 196px, '../images/sprite.png', 'arrow-back-up-primary', );
 $arrow-foward-down-white-name: 'arrow-foward-down-white';
 $arrow-foward-down-white-x: 0px;
 $arrow-foward-down-white-y: 0px;
@@ -27,21 +27,21 @@ $arrow-foward-down-white-offset-x: 0px;
 $arrow-foward-down-white-offset-y: 0px;
 $arrow-foward-down-white-width: 31px;
 $arrow-foward-down-white-height: 96px;
-$arrow-foward-down-white-total-width: 212px;
-$arrow-foward-down-white-total-height: 159px;
+$arrow-foward-down-white-total-width: 205px;
+$arrow-foward-down-white-total-height: 196px;
 $arrow-foward-down-white-image: '../images/sprite.png';
-$arrow-foward-down-white: (0px, 0px, 0px, 0px, 31px, 96px, 212px, 159px, '../images/sprite.png', 'arrow-foward-down-white', );
+$arrow-foward-down-white: (0px, 0px, 0px, 0px, 31px, 96px, 205px, 196px, '../images/sprite.png', 'arrow-foward-down-white', );
 $car-name: 'car';
-$car-x: 93px;
+$car-x: 103px;
 $car-y: 101px;
-$car-offset-x: -93px;
+$car-offset-x: -103px;
 $car-offset-y: -101px;
 $car-width: 60px;
 $car-height: 30px;
-$car-total-width: 212px;
-$car-total-height: 159px;
+$car-total-width: 205px;
+$car-total-height: 196px;
 $car-image: '../images/sprite.png';
-$car: (93px, 101px, -93px, -101px, 60px, 30px, 212px, 159px, '../images/sprite.png', 'car', );
+$car: (103px, 101px, -103px, -101px, 60px, 30px, 205px, 196px, '../images/sprite.png', 'car', );
 $check-sm-name: 'check-sm';
 $check-sm-x: 168px;
 $check-sm-y: 94px;
@@ -49,10 +49,10 @@ $check-sm-offset-x: -168px;
 $check-sm-offset-y: -94px;
 $check-sm-width: 10px;
 $check-sm-height: 8px;
-$check-sm-total-width: 212px;
-$check-sm-total-height: 159px;
+$check-sm-total-width: 205px;
+$check-sm-total-height: 196px;
 $check-sm-image: '../images/sprite.png';
-$check-sm: (168px, 94px, -168px, -94px, 10px, 8px, 212px, 159px, '../images/sprite.png', 'check-sm', );
+$check-sm: (168px, 94px, -168px, -94px, 10px, 8px, 205px, 196px, '../images/sprite.png', 'check-sm', );
 $dahsed-line-name: 'dahsed-line';
 $dahsed-line-x: 183px;
 $dahsed-line-y: 94px;
@@ -60,21 +60,21 @@ $dahsed-line-offset-x: -183px;
 $dahsed-line-offset-y: -94px;
 $dahsed-line-width: 7px;
 $dahsed-line-height: 1px;
-$dahsed-line-total-width: 212px;
-$dahsed-line-total-height: 159px;
+$dahsed-line-total-width: 205px;
+$dahsed-line-total-height: 196px;
 $dahsed-line-image: '../images/sprite.png';
-$dahsed-line: (183px, 94px, -183px, -94px, 7px, 1px, 212px, 159px, '../images/sprite.png', 'dahsed-line', );
+$dahsed-line: (183px, 94px, -183px, -94px, 7px, 1px, 205px, 196px, '../images/sprite.png', 'dahsed-line', );
 $family-name: 'family';
-$family-x: 42px;
+$family-x: 52px;
 $family-y: 101px;
-$family-offset-x: -42px;
+$family-offset-x: -52px;
 $family-offset-y: -101px;
 $family-width: 46px;
 $family-height: 42px;
-$family-total-width: 212px;
-$family-total-height: 159px;
+$family-total-width: 205px;
+$family-total-height: 196px;
 $family-image: '../images/sprite.png';
-$family: (42px, 101px, -42px, -101px, 46px, 42px, 212px, 159px, '../images/sprite.png', 'family', );
+$family: (52px, 101px, -52px, -101px, 46px, 42px, 205px, 196px, '../images/sprite.png', 'family', );
 $header-subtitle-left-name: 'header-subtitle-left';
 $header-subtitle-left-x: 130px;
 $header-subtitle-left-y: 0px;
@@ -82,10 +82,10 @@ $header-subtitle-left-offset-x: -130px;
 $header-subtitle-left-offset-y: 0px;
 $header-subtitle-left-width: 33px;
 $header-subtitle-left-height: 68px;
-$header-subtitle-left-total-width: 212px;
-$header-subtitle-left-total-height: 159px;
+$header-subtitle-left-total-width: 205px;
+$header-subtitle-left-total-height: 196px;
 $header-subtitle-left-image: '../images/sprite.png';
-$header-subtitle-left: (130px, 0px, -130px, 0px, 33px, 68px, 212px, 159px, '../images/sprite.png', 'header-subtitle-left', );
+$header-subtitle-left: (130px, 0px, -130px, 0px, 33px, 68px, 205px, 196px, '../images/sprite.png', 'header-subtitle-left', );
 $header-subtitle-right-name: 'header-subtitle-right';
 $header-subtitle-right-x: 92px;
 $header-subtitle-right-y: 0px;
@@ -93,10 +93,10 @@ $header-subtitle-right-offset-x: -92px;
 $header-subtitle-right-offset-y: 0px;
 $header-subtitle-right-width: 33px;
 $header-subtitle-right-height: 68px;
-$header-subtitle-right-total-width: 212px;
-$header-subtitle-right-total-height: 159px;
+$header-subtitle-right-total-width: 205px;
+$header-subtitle-right-total-height: 196px;
 $header-subtitle-right-image: '../images/sprite.png';
-$header-subtitle-right: (92px, 0px, -92px, 0px, 33px, 68px, 212px, 159px, '../images/sprite.png', 'header-subtitle-right', );
+$header-subtitle-right: (92px, 0px, -92px, 0px, 33px, 68px, 205px, 196px, '../images/sprite.png', 'header-subtitle-right', );
 $house-name: 'house';
 $house-x: 36px;
 $house-y: 0px;
@@ -104,37 +104,70 @@ $house-offset-x: -36px;
 $house-offset-y: 0px;
 $house-width: 51px;
 $house-height: 51px;
-$house-total-width: 212px;
-$house-total-height: 159px;
+$house-total-width: 205px;
+$house-total-height: 196px;
 $house-image: '../images/sprite.png';
-$house: (36px, 0px, -36px, 0px, 51px, 51px, 212px, 159px, '../images/sprite.png', 'house', );
+$house: (36px, 0px, -36px, 0px, 51px, 51px, 205px, 196px, '../images/sprite.png', 'house', );
 $man-woman-name: 'man-woman';
-$man-woman-x: 168px;
-$man-woman-y: 0px;
-$man-woman-offset-x: -168px;
-$man-woman-offset-y: 0px;
+$man-woman-x: 0px;
+$man-woman-y: 153px;
+$man-woman-offset-x: 0px;
+$man-woman-offset-y: -153px;
 $man-woman-width: 44px;
 $man-woman-height: 43px;
-$man-woman-total-width: 212px;
-$man-woman-total-height: 159px;
+$man-woman-total-width: 205px;
+$man-woman-total-height: 196px;
 $man-woman-image: '../images/sprite.png';
-$man-woman: (168px, 0px, -168px, 0px, 44px, 43px, 212px, 159px, '../images/sprite.png', 'man-woman', );
+$man-woman: (0px, 153px, 0px, -153px, 44px, 43px, 205px, 196px, '../images/sprite.png', 'man-woman', );
+$pdf-name: 'pdf';
+$pdf-x: 49px;
+$pdf-y: 153px;
+$pdf-offset-x: -49px;
+$pdf-offset-y: -153px;
+$pdf-width: 41px;
+$pdf-height: 43px;
+$pdf-total-width: 205px;
+$pdf-total-height: 196px;
+$pdf-image: '../images/sprite.png';
+$pdf: (49px, 153px, -49px, -153px, 41px, 43px, 205px, 196px, '../images/sprite.png', 'pdf', );
+$telegram-md-name: 'telegram-md';
+$telegram-md-x: 0px;
+$telegram-md-y: 101px;
+$telegram-md-offset-x: 0px;
+$telegram-md-offset-y: -101px;
+$telegram-md-width: 47px;
+$telegram-md-height: 47px;
+$telegram-md-total-width: 205px;
+$telegram-md-total-height: 196px;
+$telegram-md-image: '../images/sprite.png';
+$telegram-md: (0px, 101px, 0px, -101px, 47px, 47px, 205px, 196px, '../images/sprite.png', 'telegram-md', );
+$telegram-name: 'telegram';
+$telegram-x: 168px;
+$telegram-y: 63px;
+$telegram-offset-x: -168px;
+$telegram-offset-y: -63px;
+$telegram-width: 26px;
+$telegram-height: 26px;
+$telegram-total-width: 205px;
+$telegram-total-height: 196px;
+$telegram-image: '../images/sprite.png';
+$telegram: (168px, 63px, -168px, -63px, 26px, 26px, 205px, 196px, '../images/sprite.png', 'telegram', );
 $unlock-name: 'unlock';
-$unlock-x: 168px;
-$unlock-y: 48px;
-$unlock-offset-x: -168px;
-$unlock-offset-y: -48px;
+$unlock-x: 95px;
+$unlock-y: 153px;
+$unlock-offset-x: -95px;
+$unlock-offset-y: -153px;
 $unlock-width: 40px;
 $unlock-height: 41px;
-$unlock-total-width: 212px;
-$unlock-total-height: 159px;
+$unlock-total-width: 205px;
+$unlock-total-height: 196px;
 $unlock-image: '../images/sprite.png';
-$unlock: (168px, 48px, -168px, -48px, 40px, 41px, 212px, 159px, '../images/sprite.png', 'unlock', );
-$spritesheet-width: 212px;
-$spritesheet-height: 159px;
+$unlock: (95px, 153px, -95px, -153px, 40px, 41px, 205px, 196px, '../images/sprite.png', 'unlock', );
+$spritesheet-width: 205px;
+$spritesheet-height: 196px;
 $spritesheet-image: '../images/sprite.png';
-$spritesheet-sprites: ($arrow-back-up-primary, $arrow-foward-down-white, $car, $check-sm, $dahsed-line, $family, $header-subtitle-left, $header-subtitle-right, $house, $man-woman, $unlock, );
-$spritesheet: (212px, 159px, '../images/sprite.png', $spritesheet-sprites, );
+$spritesheet-sprites: ($arrow-back-up-primary, $arrow-foward-down-white, $car, $check-sm, $dahsed-line, $family, $header-subtitle-left, $header-subtitle-right, $house, $man-woman, $pdf, $telegram-md, $telegram, $unlock, );
+$spritesheet: (205px, 196px, '../images/sprite.png', $spritesheet-sprites, );
 
 // The provided mixins are intended to be used with the array-like variables
 //
