--- a/src/components/form/_form.sass
+++ b/src/components/form/_form.sass
@@ -29,6 +29,7 @@
         width: 100%
 
         &:focus
-            border-color: darken($primary, 10%)
+            border-color: darken($primary, 30%)
             transition: border-color 0.3s ease
+            outline: none
 
