--- a/src/index.pug
+++ b/src/index.pug
@@ -22,7 +22,7 @@ block main
                         - i++;
 
             form#quizForm(novalidate)
-                .quiz__block.d-none
+                .quiz__block
                     header.quiz__block-header
                         .quiz__block-header-counter.mr-25 1
                         h3.h4.quiz__title Я всегда пишу список целей на год, месяц, неделю, день. Обо мне можно сказать, что я знаю, чего хочу в жизни и как этого достичь.
@@ -68,7 +68,7 @@ block main
                                 .col-sm-auto
                                     button.btn-next.btn.btn-secondary.btn-flare.btn-s48.px-25.is-active(type="button") Cледующий шаг >
 
-                .quiz__get-phone
+                .quiz__get-phone.mt-50
                     // Radio buttons
                     .row.justify-content-end.no-gutters
                         .col-md-auto.pr-30
@@ -127,14 +127,106 @@ block main
         include ./components/footer/footer
 
     .white-wrap.mt-20
-        .result
+        .result.px-sm-20
             .row.justify-content-center
                 .col-md-10
                     header.result__header
                         i.icon.unlock
-                        h2.result__title Результат тестирования и мини-техники для тебя
+                        h2.m-0.result__title Результат тестирования и мини-техники для тебя
 
-            .result__static
+            .result__static.mt-50
+                .row
+                    .col-md-auto
+                        img.img-fluid.result__static-img(src="./images/result/kouch.jpg" alt="Павлюк Дмитрий Сергеевич")
+
+                    .col-md-7.textblock
+                        p Приветствую, меня зовут Павлюк Дмитрий Сергеевич. Ты прошел тестирование и набрал <span class="text-primary fz-20 font-weight-bold"><span id="resultScore">ХХХХ</span> баллов</span>. Система выявила некоторые причины, которые затрудняют твое продвижение к целям. Я подготовил  короткие, но очень эффективные мини-техники, которые помогут тебе исправить ситуацию прямо сейчас.
+
+                        h3 Как пользоваться материалами?
+                        p Смотри видео, где я расказываю, какая техника подойдет в твоем случае и как ее применять. Или скачай ПДФ-файл — там все то же самое, только текстом. <br />Удачи, друг!
+
+            .result__container.mt-50
+                h2.h4.result__container-tlt.mb-30 Результаты самодиагностики по 5 векторам <br />достижения целей и успеха
+
+                .result__container-blocks
+                    //- Block #1
+                    .result-block
+                        .result-block__title Планирование и Декомпозиция целей
+
+                        .row
+                            .col-md-auto
+                                img(src="./images/result-block/bad/itog-testirovaniia.jpg" alt="Итоги тестирования")
+
+                            .col-md.textblock
+                                h3.h5.mb-1 Итоги тестирования
+                                p.mb-0 Ты нуждаешься в улучшении навыков планирования и декомпозиции. Это очень сильно ограничивает реализацию твоего потенциала.
+                                p.mb-0 Если ты научишься правильно ставить цель и освоишь технику декомпозиции, то самая большая мечта начнет осуществляться.
+                                p.mb-0 Я подготовил для тебя короткие мини-упражнения, которую ты можешь применить уже сегодня и получить практические навыки планирования и декомпозиции.
+
+                        h3.h6.text-cobalt.position-relative.mt-40
+                            img.bad-result-arrow-down-1(src="./images/result-block/bad/bad-result-arrow-down-1.png" alt="")
+                            | Скорее смотри это видео и выполняй задания. <br /> Не жди, начинай делать прямо сейчас.
+
+                        .row.align-items-center
+                            .col-md-auto
+                                a.video-stub(href="#")
+                                    img.img-fluid(src="./images/result-block/bad/video-stub.jpg" alt="Скорее смотри это видео и выполняй задания.")
+                            .col-md-1.textblock
+                                p.m-0 или
+
+                            .col-md.text-center
+                                a.font-weight-bold.fz-14(href="#")
+                                    i.icon.pdf
+                                    span.d-block.mt-1 Скачать технику <br />в PDF-формате
+
+                        .mt-15
+                            a.d-flex.align-items-center.fz-14(href="#" target="_blank")
+                                i.icon.telegram
+                                span.ml-2 Вступить в группу->>
+
+                    //- Block #2
+                    .result-block.px-30
+                        .result-block__title.result-block__title--simple Сложно меняться в одиночку!
+
+                        .row
+                            .col-md-auto
+                                img.img-fluid(src="./images/result-block/bad/slozhno-meniatsia.jpg" alt="Сложно меняться в одиночку")
+
+                            .col-md.textblock
+                                p.mb-0 Дорогие мои и любимые, к сожалению, я не могу выдать больше полезностей в рамках этого формата. Но я хорошо понимаю, что меняться одному сложно, нужна поддержка. Все становится гораздо легче, когда рядом люди с такими же задачами, как у тебя, и вы можете поддерживать друг друга.
+                                h3.h6.text-cobalt.mt-1 Специально для тебя я создал бесплатную рабочую группу в Телеграме.
+
+
+                        .result-block__bottom-bordered
+                            .row.ml-n100.no-gutters
+                                .col-md-auto
+                                    img.img-fluid(src="./images/result-block/bad/ty-poluchish.png" alt="Там ты получишь")
+
+                                .col-md.textblock.pl-15
+                                    p.fw-900.mb-0 Там ты получишь:
+                                    ol
+                                        li Методики, работающие техники и советы, как менять себя легче.
+                                        li Много общения с людьми, которые хотят добиться больших, интересных целей.
+                                        li Поддержку. Честную обратную связь. Это важно и помогает намного быстрее двигаться вперед.
+
+                                    p.mt-25.mb-0.position-relative
+                                        strong Жми и вступай в группу прямо сейчас!
+                                        img.bad-result-arrow-down-2(src="./images/result-block/bad/bad-result-arrow-down-2.png" alt="")
+
+                            .mt-30.text-center
+                                a.btn.btn-primary.btn-s67.btn-flare.px-20(href="#" target="_blank")
+                                    i.icon.telegram-md.mr-20
+                                    | Вступить в группу
+
+
+
+
+
+
+
+
+
+
 
 
 
